--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "json-as-xlsx": "^2.5.6",
     "node-json-db": "^2.3.0",
     "ws": "^8.14.2"
   }
